# MineRust

./: Cargo.toml  README.md
assets/minecraft/textures/misc/: Thumbs.db
src/: bloc.rs  camera.rs  main.rs  setup.rs  world.rs
src/gameplay/: mobs.rs  mod.rs  player.rs
