[package]
name = "minerust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] } # Remove when relaese
bevy-inspector-egui = "0.20.0"
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier3d"] }
bevy_rapier3d = "0.22.0"
noise = "0.8.2"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
[profile.release]
codegen-units = 1
